<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F9D51"
    android:orientation="vertical">


    <!--android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"-->
    <include
        layout="@layout/toolbar_main"
        android:id="@+id/toolbar_main">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="outsideOverlay"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/contentLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_login"
                android:textAlignment="center"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_marginBottom="25dp"/>

            <EditText
                style="@style/editName"
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="12dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/user_name_hint"
                android:background="@drawable/gb_step_input_1box"
                android:drawableLeft="@drawable/user_m"
                android:textSize="14sp"/>

            <EditText
                style="@style/editName"
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/user_password_hint"
                android:drawableLeft="@drawable/pwd_m"
                android:paddingLeft="14dp"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:background="@drawable/gb_step_input_1box"
                android:textSize="14sp"/>

               <CheckBox
                   android:id="@+id/chk_rememberpwd_login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="10dp"
                   android:textColor="@android:color/white"
                   android:text="@string/check_rememberpwd"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/buttonBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/button_login"/>

                <Button
                    android:id="@+id/btn_register"
                    style="@style/buttonBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:text="@string/button_register"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    